# codrawer-bridge

./: .gitignore  README.md  pyproject.toml  run_ipad.sh  test_ws.py
bridge/remarkable/: README.md  codrawer_bridge.py
bridge/remarkable/native/: README.md  bridge.go  device_select.go  go.mod  linux_input.go  main.go  util.go  ws_client.go
bridge/remarkable/scripts/: enable_service.sh  install_deps.sh
bridge/remarkable/systemd/: codrawer-bridge-native.service  codrawer-bridge.service
codrawer-ipad/: README.md  project.yml
codrawer-ipad/Codrawer/Sources/: CodrawerApp.swift
codrawer-ipad/Codrawer/Sources/Models/: Protocol.swift
codrawer-ipad/Codrawer/Sources/Services/: ConnectionManager.swift
codrawer-ipad/Codrawer/Sources/Views/: CanvasView.swift  ContentView.swift  RocqEditor.swift
docs/: architecture.md  latency_budget.md  protocol.md  remarkable_setup.md
model-server/: package.json  pnpm-lock.yaml
model-server/src/: server.ts
model-server/src/providers/: bedrock.ts  cerebras.ts  index.ts
model-server/src/routes/: batch.ts  completions.ts  index.ts  objects.ts  schemas.ts
model-server/src/utils/: index.ts  schema.ts  tools.ts
src/codrawer_bridge/protocol/: __init__.py  constants.py  messages.py
src/codrawer_bridge/server/: ai_worker.py  app.py  config.py  rendering.py  sessions.py  viewer_page.py
src/codrawer_bridge/tools/stroke_sim/: record_jsonl.py  replay_jsonl.py
